--- a/sesion.html
+++ b/sesion.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="sesion7.js" >
+    
+    <title>Document</title>
     </script>
 
     <title>Document</title>
 </head>
 <body>
-    <h1>Ejercicio sesion 2</h1>
+    <h1>Document sesion</h1>
+    <script src="sesion7.js"> </script>
 </body>
 </html>
