Added form, input, button and a function that uses the API to search meals by name and display the first meal name in the body

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello soruce</title>
+  <title>Hi, new title</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Dio Source</h1>
-  <img src="assets/ocean.jpg"  width="100%" alt="Logo">
+  <h1>Dio Hello!</h1>
+  <!-- <img src="assets/ocean.jpg"  width="100%" alt="Logo"> -->
+  <div>
+    <form action="">
+      <input type="text" id="nameSearch" value="" placeholder="Search for a Meal..." autocomplete="off">
+      <button type="button" onclick="searchByName()">Search</button>
+    </form>
+  </div>
+  <div id="app"></div>
+  <script src="js/API.js"></script>
 </body>
 </html>
