practice replace nodes

--- a/sesion9/replaceImg.html
+++ b/sesion9/replaceImg.html
@@ -23,6 +23,12 @@
                 image.parentNode.replaceChild(text, image)
             }
         }
+        // for (const image of images) {
+        //   if (image.alt){
+        //         let text = document.createTextNode(image.alt);
+        //         image.parentNode.replaceChild(text, image)
+        //     }
+        // }
 
       
     </script>
